# hospital-federated-learning

./: .gitignore  README.md  debug_out.txt  package.json  requirements.txt  start-gmis.ps1  test_out.txt  vercel.json  verify_integration.py
api/: index.py
auralis/: ARCHITECTURE.md  Dockerfile  README.md  __init__.py  clientapp_help.txt  docker-compose.yml  drift_test_results.txt  generate_dataset.py  node_help.txt  pyproject.toml  requirements.txt  run_fl_cluster.ps1  start_cluster.ps1
auralis/client/: client.py  client_app.py  data_loader.py  node_config.yaml  sql_data_loader.py
auralis/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
auralis/dashboard/src/: App.jsx  index.css
auralis/dashboard/src/components/: Chatbot.jsx  DiagnosticView.jsx  DriftMonitor.jsx  LeaderElection.jsx  TrainingGraph.jsx  WorldMap.jsx
auralis/drift_detector/: alert_engine.py  detector.py
auralis/drift_detector/tests/: test_drift.py
auralis/model/: chatbot.py  cnn.py  confidence.py  explainability.py  tabular_model.py
auralis/raft_leader/: election_monitor.py  gradient_cache.py  leader_node.py  stake_weights.py  start_cluster.ps1
auralis/raft_leader/tests/: test_raft.py
auralis/server/: app.py  server_app.py  simulator.py  strategy.py
scripts/: db_setup.py
