[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auralis"
version = "1.0.0"
description = "Auralis Federated Learning"
authors = [
    { name = "Auralis", email = "admin@auralis.com" }
]

[tool.flwr.app]
publisher = "auralis"

[tool.flwr.app.components]
serverapp = "server.server_app:app"
clientapp = "client.client_app:app"


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 3
# options.backend.client-resources.num-cpus = 1
# options.backend.client-resources.num-gpus = 0
